[workspace]
members = [
    "node",
    "pallets/template",
    "pallets/raft",
    "primitives/raft-seal",
    "runtime",
	"client/raft-seal"
]
[profile.release]
panic = "unwind"

[workspace.dependencies]
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-session = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }

fc-cli = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.39" }
fc-consensus = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.39" }
fc-db = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.39" }
fc-mapping-sync = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.39" }
fc-rpc = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.39" }
fc-rpc-core = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.39" }
fc-storage = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.39" }
fp-account = { default-features = false, git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.39" }
fp-dynamic-fee = { features = ["default"], git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.39" }
fp-evm = { default-features = false, git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.39" }
fp-rpc = { default-features = false, git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.39" }
fp-self-contained = { default-features = false, git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.39" }

pallet-base-fee = { default-features = false, git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.39" }
pallet-dynamic-fee = { default-features = false, git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.39" }
pallet-ethereum = { default-features = false, git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.39" }
pallet-evm = { default-features = false, git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.39" }
pallet-evm-chain-id = { default-features = false, git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.39" }
pallet-evm-precompile-modexp = { default-features = false, git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.39" }
pallet-evm-precompile-sha3fips = { default-features = false, git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.39" }
pallet-evm-precompile-simple = { default-features = false, git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.39" }
pallet-hotfix-sufficients = { default-features = false, git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.39" }

